# model-zoo

./: .gitattributes  .gitignore  pyproject.toml  setup.py
models/: srcnn.onnx
models/ai-isp/: aitm-v3.onnx  raw-dn.onnx
models/bev/: bev.onnx
models/flow/: raft.iter.onnx  raft.onnx  waft.iter.onnx  waft.onnx
models/seg/: mobile_sam_v2.onnx  repvit_m09.onnx  segformer_b0.onnx
src/zoo/: __init__.py  registry.py  utils.py
src/zoo/bench/: __init__.py  __main__.py  registry.py
src/zoo/bench/conv/: act.py  torch_conv2d.py
src/zoo/bench/gather/: torch_gather.py
src/zoo/bench/model/: aitm.py  bev.py  navrl.py  raft.py  unet.py
src/zoo/bench/scatter/: torch_scatter.py
src/zoo/bench/sdpa/: torch_sdpa.py  triton_sdpa.py
src/zoo/bench/vadd/: torch_vadd.py  triton_vadd.py
src/zoo/export/: __init__.py  __main__.py
src/zoo/export/vision/: bev.py
src/zoo/model/: __init__.py  aitm.py  nav_rl.py  raft.py  unet.py
src/zoo/model/bev/: cam_params.pt  projection.py
