[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoo"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperonnx>=1.0.1",
    "prettytable>=3.17.0",
    "pyreadline3>=3.5.4",
]

[project.scripts]
bench = "zoo.bench.__main__:main"
export = "zoo.export.__main__:main"

[project.optional-dependencies]
cpu = [
    "torch",
    "torchaudio",
    "torchvision",
    "triton-windows; sys_platform == 'win32'",
]
cuda = [
    "tensordict>=0.11.0",
    "torch",
    "torchaudio",
    "torchrl>=0.11.1",
    "torchvision",
    "triton-windows; sys_platform == 'win32'",
]
xpu = ["torch", "torchaudio", "torchvision", "pytorch-triton-xpu"]

[dependency-groups]
dev = ["black>=26.1.0", "isort>=7.0.0", "pylint>=4.0.4", "pyright>=1.1.408"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "-s"]

[tool.flake8]
ignore = ['E231', 'E241', 'E704']
per-file-ignores = ['__init__.py:F401']
exclude = []
max-line-length = 88
max-complexity = 20
count = true

[tool.isort]
profile = "black"
skip_glob = []

[tool.pylint."MAIN"]
ignore-paths = []

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "no-member",
    "no-name-in-module",
    "fixme",
    "R",
    "I",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda130", extra = "cuda" },
    { index = "pytorch-xpu", extra = "xpu" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda130", extra = "cuda" },
    { index = "pytorch-xpu", extra = "xpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda130", extra = "cuda" },
    { index = "pytorch-xpu", extra = "xpu" },
]
pytorch-triton-xpu = { index = "pytorch-xpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda131"
url = "https://download.pytorch.org/whl/cu131"
explicit = true

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "xpu" }, { extra = "cuda" }]]
